--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>moshi-adapters</artifactId>
       <version>1.13.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
 
     <!--
            Spark is a lightweight framework for creating web applications.
