--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version> <!-- Or the latest version available -->
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
