--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+      <!-- Or the latest version available -->
+    </dependency>
+
     <!--
            JUnit is a unit testing library for Java.
     -->
@@ -76,12 +83,6 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.4.0</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.8.0</version> <!-- Or the latest version available -->
     </dependency>
 
   </dependencies>
